--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id = "@+id/main_menu"
+>
+
+    <item
+        android:id="@+id/mi_history"
+        android:title="@string/bmi_menu_historyTitle"
+        android:enabled="false"
+    />
+
 
     <item
             android:id="@+id/mi_about"
